tg_parser/tests/invalid/int_transistor_net_ref.tg
gate BadNet(in a; out y) {
    pmos drain=1, gate=a, source=VDD;
}
